--- a/packages/app-defaults/package.json
+++ b/packages/app-defaults/package.json
@@ -51,7 +51,7 @@
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^12.1.3",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/react": "^16.13.1 || ^17.0.0"
   },
   "files": [
