--- a/packages/codemods/package.json
+++ b/packages/codemods/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@types/jscodeshift": "^0.11.0",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "commander": "^6.1.0",
     "ts-node": "^10.0.0"
   },
