--- a/packages/config-loader/package.json
+++ b/packages/config-loader/package.json
@@ -54,7 +54,7 @@
     "@types/jest": "^26.0.7",
     "@types/json-schema-merge-allof": "^0.6.0",
     "@types/mock-fs": "^4.10.0",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/yup": "^0.29.13",
     "mock-fs": "^5.1.0",
     "msw": "^0.35.0"
