--- a/packages/core-app-api/package.json
+++ b/packages/core-app-api/package.json
@@ -56,7 +56,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/zen-observable": "^0.8.0",
     "cross-fetch": "^3.1.5",
     "msw": "^0.35.0"
