--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/inquirer": "^8.1.3",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/recursive-readdir": "^2.2.0",
     "mock-fs": "^5.1.1",
     "ts-node": "^10.0.0"
