--- a/packages/techdocs-cli-embedded-app/package.json
+++ b/packages/techdocs-cli-embedded-app/package.json
@@ -34,7 +34,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/react-dom": "*",
     "cross-env": "^7.0.0",
     "cypress": "^9.5.0",
