--- a/packages/techdocs-cli/package.json
+++ b/packages/techdocs-cli/package.json
@@ -42,7 +42,7 @@
     "@types/fs-extra": "^9.0.6",
     "@types/http-proxy": "^1.17.4",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/serve-handler": "^6.1.0",
     "@types/webpack-env": "^1.15.3",
     "cypress": "^9.5.0",
