--- a/plugins/badges/package.json
+++ b/plugins/badges/package.json
@@ -54,7 +54,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "cross-fetch": "^3.1.5",
     "msw": "^0.35.0"
   },
