--- a/plugins/code-climate/package.json
+++ b/plugins/code-climate/package.json
@@ -49,7 +49,7 @@
     "@types/humanize-duration": "^3.27.1",
     "@types/jest": "^26.0.7",
     "@types/luxon": "^2.0.9",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "cross-fetch": "^3.1.5",
     "msw": "^0.35.0"
   },
