--- a/plugins/cost-insights/package.json
+++ b/plugins/cost-insights/package.json
@@ -68,7 +68,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/pluralize": "^0.0.29",
     "@types/recharts": "^1.8.14",
     "@types/regression": "^2.0.0",
