--- a/plugins/fossa/package.json
+++ b/plugins/fossa/package.json
@@ -61,7 +61,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "msw": "^0.35.0"
   },
   "files": [
