--- a/plugins/gcalendar/package.json
+++ b/plugins/gcalendar/package.json
@@ -54,7 +54,7 @@
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.calendar": "^3.0.10",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/sanitize-html": "^2.6.2",
     "cross-fetch": "^3.1.5",
     "msw": "^0.35.0"
