--- a/plugins/git-release-manager/package.json
+++ b/plugins/git-release-manager/package.json
@@ -52,7 +52,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "@types/recharts": "^1.8.15",
     "cross-fetch": "^3.1.5",
     "msw": "^0.35.0"
