--- a/plugins/gocd/package.json
+++ b/plugins/gocd/package.json
@@ -59,7 +59,7 @@
     "@types/jest": "^26.0.7",
     "@types/lodash": "^4.14.173",
     "@types/luxon": "^2.0.4",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "cross-fetch": "^3.1.5",
     "msw": "^0.35.0"
   },
