--- a/plugins/stack-overflow/package.json
+++ b/plugins/stack-overflow/package.json
@@ -49,7 +49,7 @@
     "@backstage/dev-utils": "^1.0.1-next.0",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.14.32",
+    "@types/node": "^16.x",
     "msw": "^0.35.0"
   },
   "files": [
